--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+body {
+  background-color: #F8F9FA !important;
+  text-align: center;
+}
+
 .App {
   text-align: center;
 }
@@ -7,31 +12,80 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+  display: inline-flex;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: black;
+}
+
+.container {
+  padding: 0 !important;
+}
+
+nav,
+a {
+  padding: 0 !important;
+}
+
+.navbar {
+  padding: 0 !important;
+}
+
+.navbar-brand {
+  margin-right: 40px !important;
+  font-family: 'Noto Sans', sans-serif;
+  font-family: 'Shadows Into Light', cursive;
+}
+
+.nav-link {
+  margin-right: 20px !important;
+}
+
+.elogo {
+  transform: scale(0.7);
 }
 
 .App-link {
   color: #61dafb;
 }
 
+.about {
+  width: 70%;
+  margin: 20px auto;
+  font-size: 20px;
+  font-family: 'Montserrat', sans-serif;
+  color: gray;
+  font-weight: bolder;
+}
+
+.toogleButton {
+  margin-left: 50px;
+  margin-top: 30px;
+}
+
+.about p {
+  padding: 20px 0;
+}
+
+.login {
+  font-weight: bold !important;
+}
+
+.home {
+  font-family: 'Montserrat', sans-serif;
+  color: gray;
+  font-weight: bold;
+  font-size: 20px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
