--- a/src/App.css
+++ b/src/App.css
@@ -106,13 +106,58 @@ a {
   margin: 0 5px!important;
 }
 
+
 .carouselImage {
   width: 50%;
-  height: 80vh;
+  height: 90vh;
 }
 
 .Carousel {
   font-family: 'Montserrat', sans-serif;
+}
+
+.Events {
+  width: 100%;
+  /* height: 100vh; */
+  top: 0!important;
+  bottom: 0!important;
+  right: 0!important;
+  left: 0!important;
+  position: absolute;
+  background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+}
+
+.Events .card {
+  border-radius: 10px;
+  width: 90%!important;
+  transition: all 2s ease;
+}
+
+.card:hover {
+  transform: scale(1.1);
+}
+
+.card img {
+  width: 100%;
+  height: 250px;
+}
+
+.carouselTitle {
+  font-family: 'Kaushan Script', cursive!important;
+  color: red;
+  font-size: 5rem;
+}
+
+.carouselText {
+  font-family: 'Baloo Thambi 2', cursive;
+  color: white;
+  font-size: 1.5rem;
+  opacity: 0.7;
+}
+
+.carousel-caption {
+  position: absolute;
+  background: rgba(255, 255, 255, 0.2);
 }
 
 @keyframes App-logo-spin {
